# online-judge

./: .gitignore  CMakeLists.txt
ads/: main.cpp
area/: bf.cpp  gen.cpp  main.cpp  test.sh
assign1/: 0.inp  Makefile  bf.cpp  gen.inp  main.cpp
auction/: ans.cpp  main.cpp
baove/: 1.inp  3.inp  4.inp  5.inp  main.cpp
binary-search/: ans.cpp  gen.cpp  main.cpp
bit/: main.cpp
euler/: 0.inp  main.cpp
floyd/: Makefile  main.cpp
floyd/test/: FLOYD.OU0  FLOYD.OU2  FLOYD.OU3  FLOYD.OU4  FLOYD.OU5  FLOYD.OU6  FLOYD.OU7  FLOYD.OU9
graph_/: ans.cpp  gen.cpp  main.cpp
gss/: ans.cpp  ans.pas  gen.cpp  gen.inp  main.cpp
line-hotel/: 0.inp  main.ts  package.json
lis/: ans.cpp  gen.cpp  main.cpp
match1/: main.cpp
match2/: main.cpp
nkinv/: 0.inp  gen.cpp
qbmst/: main.cpp
qmax/: 0.inp
qtree/: .gitignore  3.inp  7.inp  9.inp  Makefile  gen  gen.cc  output  qtree.cc
qtree2/: 1.inp  4.inp  5.inp  5.out-old  qtree2.cc
substr/: 0.inp
template/: gen.cpp  main.cpp  test.sh
tjalg/: 0.inp  ans.cpp  gen.cpp  main.cpp
track/: 0.inp  1.inp  Makefile
vn-spoj/area/: bf.cpp  bf.sh  gen.cpp  gen.inp  gen.sh  run.sh
vn-spoj/assign1/: gen.cpp  main.cpp
vn-spoj/baove/: Makefile  main.cpp
vn-spoj/euler/: gen.cpp
vn-spoj/floyd/: main.cpp
vn-spoj/heap1/: main-std.cpp  main.cpp
vn-spoj/liq/: main.cpp
vn-spoj/lis/: 0.inp  gen.inp
vn-spoj/match1/: main.cpp
vn-spoj/nkinv/: main.cpp
vn-spoj/qbmst/: ans.cpp
vn-spoj/qmax/: main.cpp
vn-spoj/qmax2/: main.cpp
vn-spoj/qtree/: .gitignore  1.inp  2.inp  27.inp  4.inp  5.inp  8.inp  9.inp  qtree1.cc
(+30 files in other folders)
